--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 }
 
-.title {    /* the styles below will affect the title under the numbers, i.e., “Days”, “Hours”, etc. */
+.title {    /* the styles below will affect the title under the numbers, i.e., â€œDaysâ€, â€œHoursâ€, etc. */
 
     border: none;   
 
@@ -138,22 +138,22 @@ and on 1/10/2010 to include time zone offset.
 
 /*  Change the items below to create your countdown target date and announcement once the target date and time are reached.  */
 
-var current="Winter is Hipster";     //—>enter what you want the script to display when the target date and time are reached, limit to 20 characters
+var current="Winter is Hipster";     //â€”>enter what you want the script to display when the target date and time are reached, limit to 20 characters
 
-var year=2015;        //—>Enter the count down target date YEAR
+var year=2015;        //â€”>Enter the count down target date YEAR
 
-var month=10;          //—>Enter the count down target date MONTH
+var month=10;          //â€”>Enter the count down target date MONTH
 
-var day=29;           //—>Enter the count down target date DAY
+var day=29;           //â€”>Enter the count down target date DAY
 
-var hour=0;          //—>Enter the count down target date HOUR (24 hour clock)
+var hour=0;          //â€”>Enter the count down target date HOUR (24 hour clock)
 
-var minute=0;        //—>Enter the count down target date MINUTE
+var minute=0;        //â€”>Enter the count down target date MINUTE
 
-var tz=-5;            //—>Offset for your timezone in hours from UTC (see http://wwp.greenwichmeantime.com/index.htm to find the timezone offset for your location)
+var tz=-5;            //â€”>Offset for your timezone in hours from UTC (see http://wwp.greenwichmeantime.com/index.htm to find the timezone offset for your location)
 
 
-//—>    DO NOT CHANGE THE CODE BELOW!    <—
+//â€”>    DO NOT CHANGE THE CODE BELOW!    <â€”
 
 var montharray=new Array("Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec");
 
@@ -303,7 +303,7 @@ function countdown(yr,m,d,hr,min){
                 <div class="container">
                     <div class="carousel-content">
                         <h1><b>&nbsp HIPSTER</b></h1>
-                        <p class="lead">Xeon is the best free onepage responsive theme available arround the globe<br>Download it right now for free</p>
+                        <p class="lead">Hipster is a mashup of different stuffs brought under one Chandelier and that too Open Source'd </p>
                     </div>
                 </div>
             </div><!--/.item-->
