--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ function countdown(yr,m,d,hr,min){
                 <div class="container">
                     <div class="carousel-content">
                         <h1><b>&nbsp HIPSTER</b></h1>
-                        <p class="lead">Hipster is a mashup of different stuffs brought under one Chandelier and that too Open Source'd </p>
+                        <p class="lead">Hipster is a mashup of different stuffs brought under one &nbsp<a href="https://www.youtube.com/watch?v=2vjPBrBU-TM">Chandelier</a> &nbsp and that too Open Source'd </p>
                     </div>
                 </div>
             </div><!--/.item-->
