--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>New Age - Start Bootstrap Theme</title>
+    <title>EvalAI</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand" href="#page-top"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -41,14 +41,25 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">Download</a>
+              <a class="nav-link" href="#download">Challenges</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#features">Features</a>
+              <a class="nav-link" href="#features">News </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link" href="#contact">Forums </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Join Us</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="btn btn-outline btn-xl btn-top">Sign Up</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="btn btn-2 text btn-top">Log In</a>
+            </li>
+           
+
           </ul>
         </div>
       </div>
@@ -64,7 +75,7 @@
               <p class="mb-5 text-italic text-center">EvalAI is an Open Source Platform for organizing and participating in AI challenges</p>
              <!-- <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a> -->
               <div class="row eval-btn">
-                <a href="" class="btn btn-outline btn-xl js-scroll-trigger">Host a Challenge</a>
+                <a href="" class="btn btn-outline btn-xl">Host a Challenge</a>
                 <a href="" class="btn btn-1">Participate</a>
               </div>
             
